# guesture-recognition-demo

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  main.py  pyproject.toml
config/: settings.py
docs/: IMPLEMENTATION_PLAN.md
examples/: robocar_integration.py
src/: gesture_detector.py  gesture_recognizer.py  hand_tracker.py  video_processor.py  visualizer.py
tests/: conftest.py  test_gesture_detector.py  test_gesture_recognizer.py
